--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "name": "my-app",
+  "name": "resume-builder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@headlessui/react": "^1.6.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "autoprefixer": "^10.4.8",
+    "babel": "^6.23.0",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "styled-components": "^5.3.5",
+    "styled-icons": "^10.46.0",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.3",
+    "web-vitals": "^2.1.0",
+    "webpack": "^5.74.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "author": "Elizabeth Thomas <elizabeth.thomas@teachedison.com>",
+  "license": "MIT"
 }
