--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-icons": "^10.46.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.0",
     "webpack": "^5.74.0"
   },
