--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.8",
     "babel": "^6.23.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
